add AD products

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,8 @@ en:
     accounts: "Accounts"
     accounts_extra: "Accounts Extra"
     collaborate: "Collaborate"
+    accountant_edition: "Accountant Edition"
+    accounts_production: "Accounts Production"
     payroll: "Payroll"
     addons: "Addons"
     help: "Help"
