Change Accounts Production to Final Accounts

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,7 +17,7 @@ en:
     accounts_extra: "Accounts Extra"
     collaborate: "Collaborate"
     accountant_edition: "Accountant Edition"
-    accounts_production: "Accounts Production"
+    accounts_production: "Final Accounts"
     payroll: "Payroll"
     addons: "Addons"
     help: "Help"
