--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,7 +14,7 @@ en:
   app:
     mysageone: 'My Sage One'
     accounts: 'Accounts'
-    accounts_extra: 'Accounts Extra'
+    accounts_extra: 'Accounting'
     collaborate: 'Collaborate'
     accountant_edition: 'Accountant Edition'
     accounts_production: 'Final Accounts'
